google sign in added, --Broken

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_activity_sign_in">Sign in</string>
 
     <!-- Strings related to login -->
+    <string name="signed_in_fmt">Signed in as: %s</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_register">Register</string>
@@ -17,4 +18,5 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="signed_out">Signed Out</string>
 </resources>
