--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,18 +6,10 @@
 
     <!-- Strings related to login -->
     <string name="signed_in_fmt">Signed in as: %s</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_register">Register</string>
-    <string name="action_sign_in">Sign in</string>
+    <string name="remember_me">Remember me</string>
+    <string name="label_sign_in">Sign In</string>
+    <string name="action_google_sign_out">Sign Out</string>
     <string name="action_google_sign_in">Sign In with Google</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
     <string name="server_client_id">749349461099-5cpqn73ikggepcckpglu6osdsrp5cnpr.apps.googleusercontent.com</string>
     <string name="signed_out">Signed Out</string>
 </resources>
