--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,11 @@
     <string name="pref_slouch_detection">Slouch Detection</string>
     <string name="pref_slouch_detection_tolerance">Tolerance</string>
     <string name="pref_slouch_tolerance_default">5%</string>
+    <string name="preferences">Preferences</string>
+    <string name="calibration">Calibration</string>
+    <string name="bluetooth">Bluetooth</string>
+    <string name="settings">Settings</string>
+    <string name="sign_out">Sign Out</string>
 
     <string-array name="pref_slouch_tolerances">
         <item>5%</item>
