--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,6 @@
     <string name="nav_monthly">Monthly</string>
     <string name="selectMonthly">Select Month</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
     <string name="title_activity_sign_in">Sign in</string>
 
     <!-- Strings related to login -->
@@ -47,6 +44,10 @@
     <string name="bluetooth">Bluetooth</string>
     <string name="settings">Settings</string>
     <string name="sign_out">Sign Out</string>
+
+    <!--Side Navigation view-->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string-array name="pref_slouch_tolerances">
         <item>5%</item>
